# openrouter-rs

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  README.md  SECURITY.md  SUPPORT.md  justfile
.github/: CODEOWNERS  labeler.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: upstream-compatibility-update.md
.github/workflows/: ci.yml  cli-integration.yml  cli-release.yml  integration.yml  labeler.yml  live-contract.yml  openapi-drift.yml  pr-title.yml  release.yml  sync-labels.yml
crates/openrouter-cli/: Cargo.toml  README.md
crates/openrouter-cli/src/: cli.rs  config.rs  main.rs
crates/openrouter-cli/tests/: discovery_commands.rs  help.rs  live_smoke.rs  management_commands.rs  profile_show.rs  usage_commands.rs
docs/: README.md  cli-automation-workflows.md  compatibility-update-policy.md  generated-core-architecture.md  http-transport-migration.md  maintenance-policy.md  official-endpoint-test-matrix.md  openapi-drift-reporting.md
docs/design/: generated-core-architecture.md  http-transport-migration.md
docs/operations/: official-endpoint-test-matrix.md  openapi-drift-reporting.md
docs/policies/: compatibility-update-policy.md  maintenance-policy.md
examples/: axum_chat_gateway.rs  basic_tool_calling.rs  chat_with_audio_input.rs  chat_with_reasoning.rs  commands.rs  create_api_key.rs  create_coinbase_charge.rs  create_embedding.rs  create_message.rs  create_rerank.rs  create_response.rs  create_speech.rs  create_transcription.rs  create_tts.rs  create_video_generation.rs  custom_http_client.rs  delete_api_key.rs  domain_chat_completion.rs  domain_management_api_keys.rs  exchange_code_for_api_key.rs  get_api_key.rs  get_credits.rs  get_current_api_key_info.rs  get_generation.rs  list_api_keys.rs  list_byok_keys.rs  list_embedding_models.rs  list_model_endpoints.rs  list_models.rs  list_models_by_category.rs  list_models_by_parameters.rs  list_observability_destinations.rs  list_organization_members.rs  list_workspaces.rs  reasoning_anthropic_details.rs  reasoning_chain_of_thought.rs  send_chat_completion.rs  send_completion_request.rs  stream_chat_completion.rs  stream_chat_with_reasoning.rs  (+12 more)
scripts/: check_migration_docs.sh  openapi_drift.py  sync_hot_models.sh  sync_model_pool.sh
specs/openrouter/: README.md  openapi-baseline.json  openapi-baseline.operations.json
src/: client.rs  command.rs  error.rs  lib.rs  types.rs  utils.rs
src/api/: analytics.rs  api_keys.rs  audio.rs  auth.rs  byok.rs  chat.rs  completion.rs  credits.rs  discovery.rs  embeddings.rs  errors.rs  files.rs  generation.rs  guardrails.rs  images.rs  messages.rs  mod.rs  models.rs  observability.rs  organization.rs  presets.rs  rerank.rs  responses.rs  tts.rs  videos.rs  workspaces.rs
src/command/: model.rs
src/config/: api_key.rs  default_config.toml  loader.rs  mod.rs  model.rs
src/transport/: mod.rs  request.rs  response.rs  sse.rs
src/types/: completion.rs  mod.rs  pagination.rs  provider.rs  response_format.md  response_format.rs  stream.rs  tool.rs  typed_tool.rs
tests/: migration_smoke.rs  test_openapi_drift.py
tests/unit/: audio.rs  (+39 more)
(+35 files in other folders)
