[package]
name = "openrouter-rs"
version = "0.4.0"
edition = "2024"
authors = ["luckywood <morrisliu1994@outlook.com>"]
description = "A type-safe OpenRouter Rust SDK"
license = "MIT"
repository = "https://github.com/realmorrisliu/openrouter-rs"
homepage = "https://github.com/realmorrisliu/openrouter-rs"
documentation = "https://docs.rs/openrouter-rs"
readme = "README.md"
keywords = ["openrouter", "ai", "sdk"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
anyhow = "1.0.86"
dotenvy_macro = "0.15.7"
dirs = "6.0.0"
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surf = "2.3.2"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
toml = "0.8.20"
keyring = { version = "3.6.2", features = [
  "apple-native",
  "windows-native",
  "sync-secret-service",
] }
zeroize = "1.8.1"
urlencoding = "2.1.3"
once_cell = "1.21.3"
