[package]
name = "openrouter-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "CLI for OpenRouter account and SDK workflows"
license = "MIT"
repository = "https://github.com/realmorrisliu/openrouter-rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.20"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.19.1"
